[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/Enemy.gd" type="Script" id=1]
[ext_resource path="res://graphic/enemy1.png" type="Texture" id=2]
[ext_resource path="res://graphic/healthBarBorder.png" type="Texture" id=3]
[ext_resource path="res://graphic/EnemyHealthBar.png" type="Texture" id=4]
[ext_resource path="res://Audio/Blaster1.wav" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 40.0

[node name="Enemy" type="Area2D"]
script = ExtResource( 1 )

[node name="Enemy1" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0, 30 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="healthBar" type="TextureProgress" parent="."]
margin_left = -40.0
margin_top = 10.0
margin_right = 40.0
margin_bottom = 90.0
texture_progress = ExtResource( 4 )

[node name="healthBarBorder" type="TextureRect" parent="."]
margin_left = -45.0
margin_top = 10.0
margin_right = 45.0
margin_bottom = 90.0
texture = ExtResource( 3 )

[node name="EnemyBlasterSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = 8.0

[connection signal="body_entered" from="." to="." method="_on_EnemyShot_body_entered"]
[connection signal="body_entered" from="." to="." method="_on_Enemy_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
